# vulkanTest

./: .gitmodules  default.nix  lib.nix  shell.nix  vulkanTest.cabal  vulkanTest.nix
binaries/: vulkanTest.cabal
binaries/src/: Main.hs
main/: run  vulkanTest.cabal
main/src/: Main.hs
refs/: GLFW-b  bindings-GLFW  easytensor  easytensor-fork  nixpkgs  nixpkgs-fork  vulkan-api
sandbox/: .gitignore  cabal.project  shell.nix
sandbox/sandbox/: .ghcid  LICENSE  Shakefile.hs  sandbox.cabal
sandbox/sandbox/example-src/: Pipelines.hs  Triangle.hs  VulkanExample.hs
sandbox/sandbox/shaders/: sandbox.frag  shader.vert  triangle.frag  triangle.vert
sandbox/sandbox/src/: ApplicationException.hs  Main.hs  Sandbox.hs
sandbox/sandbox/src/Control/Monad/Trans/Resource/: Local.hs
sandbox/sandbox/src/Data/Acquire/: Local.hs
sandbox/sandbox/src/Data/Array/MArray/: Local.hs
sandbox/sandbox/src/Data/Bits/: Local.hs
sandbox/sandbox/src/Foreign/Marshal/Array/: Sized.hs
sandbox/sandbox/src/Graphics/: VulkanAux.hs
sandbox/sandbox/src/Graphics/UI/: GLFWAux.hs
sandbox/sandbox/src/Graphics/Vulkan/Marshal/: Local.hs
sandbox/sandbox/src/Graphics/Vulkan/Marshal/Create/: Local.hs
sandbox/sandbox/src/Graphics/VulkanAux/: Array.hs  ArrayFiller.hs  Buffer.hs  Command.hs  CommandBuffer.hs  CommandPool.hs  DebugReportCallback.hs  DescriptorPool.hs  DescriptorSet.hs  DescriptorSetLayout.hs  Device.hs  Exception.hs  Fence.hs  Framebuffer.hs  GLFW.hs  GLTF.hs  Getter.hs  GraphicsPipeline.hs  Image.hs  ImageView.hs  Instance.hs  KTX.hs  Memory.hs  PhysicalDevice.hs  PipelineLayout.hs  Queue.hs  RenderPass.hs  Resource.hs  Sampler.hs  Semaphore.hs  ShaderModule.hs  Swapchain.hs  VkaIArray.hs
sandbox/sandbox/src/Pipes/Prelude/: Local.hs
sandbox/sandbox/src/Prelude/: Local.hs
shaders/: shader.vert
src/: Main.hs
vulkan-tutorial/: .gitignore  LICENSE  default.nix  ref  refs.nix  shell.nix  vulkan-tutorial.nix
vulkan-tutorial/main/: run  vulkan-tutorial.cabal
vulkan-tutorial/main/src/: Main.hs
vulkan-tutorial/refs/: easytensor  nixpkgs  vulkan-api
