cabal-version:       3.0

name:                sandbox
version:             0.1.0.0
synopsis:            A sandbox for tinkering with vulkan.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Matthew Stewart
maintainer:          m.scott.stewart@gmail.com
category:            Graphics
build-type:          Simple
extra-source-files:
  ChangeLog.md
  shaders/*.vert
  shaders/*.frag
data-dir: data
data-files:
  shaders/*.spv

executable sandbox
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Control.Monad.Trans.Resource.Local
    Data.Acquire.Local
    Data.Bits.Local
    Foreign.Marshal.Array.Sized
    Graphics.UI.GLFWAux
    Graphics.Vulkan.Marshal.Local
    Graphics.VulkanAux
    Graphics.VulkanAux.Array
    Graphics.VulkanAux.ArrayFiller
    Graphics.VulkanAux.Buffer
    Graphics.VulkanAux.Command
    Graphics.VulkanAux.CommandBuffer
    Graphics.VulkanAux.Exception
    Graphics.VulkanAux.Fence
    Graphics.VulkanAux.Getter
    Graphics.VulkanAux.GLFW
    Graphics.VulkanAux.Image
    Graphics.VulkanAux.ImageView
    Graphics.VulkanAux.KTX
    Graphics.VulkanAux.Memory
    Graphics.VulkanAux.Queue
    Graphics.VulkanAux.Resource
    Graphics.VulkanAux.Sampler
    Prelude.Local
    Paths_sandbox
  ghc-options: -threaded -Wall -Wno-name-shadowing -Wno-unused-matches -fno-ignore-asserts
  build-depends:
    array,
    clock,
    containers,
    dimensions,
    easytensor,
    easytensor-vulkan,
    exceptions,
    extra,
    GLFW-b,
    ktx-rw,
    monad-loops,
    mtl,
    reflection,
    resourcet,
    safe,
    transformers,
    typelits-witnesses,
    unliftio,
    unliftio-core,
    vulkan-api,

    base >=4.12 && <4.13
  default-extensions:
    DataKinds,
    LambdaCase,
    ScopedTypeVariables,
    TupleSections,
    TypeApplications,
    ViewPatterns
  default-language:    Haskell2010
