cabal-version:       3.0

name:                sandbox
version:             0.1.0.0
synopsis:            A sandbox for tinkering with vulkan.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Matthew Stewart
maintainer:          m.scott.stewart@gmail.com
category:            Graphics
build-type:          Simple
extra-source-files:
  ChangeLog.md
  shaders/*.vert
  shaders/*.frag
data-dir: data
data-files:
  shaders/*.spv

common common
  hs-source-dirs: src
  ghc-options: -threaded -Wall -Wno-name-shadowing -Wno-unused-matches -fno-ignore-asserts
  default-language: Haskell2010
  default-extensions:
    DataKinds,
    LambdaCase,
    ScopedTypeVariables,
    TupleSections,
    TypeApplications,
    ViewPatterns
  build-depends:
    array,
    clock,
    containers,
    dimensions,
    easytensor ^>= 2.1,
    easytensor-vulkan,
    exceptions,
    extra,
    GLFW-b,
    ktx-rw,
    monad-loops,
    mtl,
    reflection,
    resourcet,
    safe,
    transformers,
    typelits-witnesses,
    unliftio,
    unliftio-core,
    vulkan-api,
    base ^>=4.12
  other-modules:
    ApplicationException
    Control.Monad.Trans.Resource.Local
    Data.Acquire.Local
    Data.Bits.Local
    Foreign.Marshal.Array.Sized
    Graphics.UI.GLFWAux
    Graphics.Vulkan.Marshal.Local
    Graphics.VulkanAux
    Graphics.VulkanAux.Array
    Graphics.VulkanAux.ArrayFiller
    Graphics.VulkanAux.Buffer
    Graphics.VulkanAux.Command
    Graphics.VulkanAux.CommandBuffer
    Graphics.VulkanAux.CommandPool
    Graphics.VulkanAux.DebugReportCallback
    Graphics.VulkanAux.DescriptorPool
    Graphics.VulkanAux.DescriptorSet
    Graphics.VulkanAux.DescriptorSetLayout
    Graphics.VulkanAux.Device
    Graphics.VulkanAux.Exception
    Graphics.VulkanAux.Fence
    Graphics.VulkanAux.Framebuffer
    Graphics.VulkanAux.Getter
    Graphics.VulkanAux.GLFW
    Graphics.VulkanAux.GraphicsPipeline
    Graphics.VulkanAux.Image
    Graphics.VulkanAux.ImageView
    Graphics.VulkanAux.Instance
    Graphics.VulkanAux.KTX
    Graphics.VulkanAux.Memory
    Graphics.VulkanAux.PhysicalDevice
    Graphics.VulkanAux.PipelineLayout
    Graphics.VulkanAux.Queue
    Graphics.VulkanAux.RenderPass
    Graphics.VulkanAux.Resource
    Graphics.VulkanAux.Sampler
    Graphics.VulkanAux.Semaphore
    Graphics.VulkanAux.ShaderModule
    Graphics.VulkanAux.Swapchain
    Prelude.Local
    Paths_sandbox

executable sandbox
  import: common
  main-is: Sandbox.hs

common example-common
  import: common
  hs-source-dirs: example-src

executable triangle
  import: example-common
  main-is: Triangle.hs
